creacion de test en emerging tech

--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -1,3 +1,4 @@
+/internal/
 /CustomKeywords.class
 /TempTestCase1674140396120.class
 /TempTestCase1674148941261.class
@@ -131,4 +132,56 @@
 /TempTestCase1676560986222.class
 /TempTestCase1676562243578.class
 /TempTestCase1676562286764.class
-/internal/
+/TempTestCase1676993093674.class
+/TempTestCase1676993275839.class
+/TempTestCase1677005659786.class
+/TempTestCase1677005987711.class
+/TempTestCase1677006045378.class
+/TempTestCase1677006111845.class
+/TempTestCase1677006441865.class
+/TempTestCase1677006710268.class
+/TempTestCase1677006918716.class
+/TempTestCase1677007558443.class
+/TempTestCase1677007575376.class
+/TempTestCase1677008018481.class
+/TempTestCase1677008067356.class
+/TempTestCase1677008193576.class
+/TempTestCase1677072137626.class
+/TempTestCase1677072655005.class
+/TempTestCase1677072744623.class
+/TempTestCase1677072814777.class
+/TempTestCase1677073856270.class
+/TempTestCase1677073928105.class
+/TempTestCase1677074076701.class
+/TempTestCase1677074466340.class
+/TempTestCase1677078678642.class
+/TempTestCase1677087444731.class
+/TempTestCase1677089168024.class
+/TempTestCase1677089382154.class
+/TempTestCase1677089974368.class
+/TempTestCase1677090040537.class
+/TempTestCase1677090515279.class
+/TempTestCase1677090697659.class
+/TempTestCase1677090827207.class
+/TempTestCase1677091592913.class
+/TempTestCase1677094086768.class
+/TempTestCase1677094253310.class
+/TempTestCase1677094601659.class
+/TempTestCase1677094764478.class
+/TempTestCase1677162578569.class
+/TempTestCase1677163370001.class
+/TempTestCase1677176295542.class
+/TempTestCase1677176454226.class
+/TempTestCase1677176691820.class
+/TempTestCase1677176838621.class
+/TempTestCase1677176912543.class
+/TempTestCase1677177074541.class
+/TempTestCase1677177911926.class
+/TempTestCase1677178186446.class
+/TempTestCase1677178435544.class
+/TempTestCase1677178639799.class
+/TempTestCase1677179201551.class
+/TempTestCase1677179320638.class
+/TempTestCase1677502807805.class
+/TempTestCase1677505081663.class
+/TempTestCase1677505202825.class
