--- a/.project
+++ b/.project
@@ -15,18 +15,6 @@
 		<nature>org.eclipse.jdt.groovy.core.groovyNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
-	<linkedResources>
-		<link>
-			<name>kat-341936109331900439.groovy</name>
-			<type>1</type>
-			<location>C:/Users/lfiguers/AppData/Local/Temp/Katalon/Web Services/kat-341936109331900439.groovy</location>
-		</link>
-		<link>
-			<name>kat-3746069934591634672.groovy</name>
-			<type>1</type>
-			<location>C:/Users/lfiguers/AppData/Local/Temp/Katalon/Web Services/kat-3746069934591634672.groovy</location>
-		</link>
-	</linkedResources>
 	<filteredResources>
 		<filter>
 			<id>1672346218325</id>
@@ -579,6 +567,24 @@
 		</filter>
 		<filter>
 			<id>1676982953821</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>(.*\.svn-base$)|(.*\.png$)|(.*\.log$)|(.*\.xlsx$)|(.*\.xls$)|(.*\.csv$)|(.*\.txt$)</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1676991815242</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>.*\.svn$</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1676991815253</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
